base-installer (1.55) UNRELEASED; urgency=low

  * Switch to using initramfs-tools by default for sparc; not available on
    netinst CDs yet, but base-installer will select yaird in that case.

 -- Frans Pop <fjp@debian.org>  Thu, 23 Mar 2006 13:16:11 +0100

base-installer (1.54) unstable; urgency=low

  * Fix logic when testing for initramfs generator.

 -- Frans Pop <fjp@debian.org>  Tue, 21 Mar 2006 22:43:19 +0100

base-installer (1.53) unstable; urgency=low

  * Allow initramfs generator selection to fall back to initrd-tools when
    Sarge is being installed. This was accidentally blocked in 1.46.
  * Add backwards support for Sarge kernels in function to select default
    kernel image (x86 only for now).
  * If no default kernel could be determined, ask the kernel selection
    question at high instead of medium priority.

  [ Updated translations ]
  * Basque (eu.po) by Piarres Beobide

 -- Frans Pop <fjp@debian.org>  Mon, 20 Mar 2006 18:37:19 +0100

base-installer (1.52) unstable; urgency=low

  * Rebuilt with new libd-i to get proper udeb dependency.

 -- Joey Hess <joeyh@debian.org>  Sat, 18 Mar 2006 14:07:09 -0500

base-installer (1.51) unstable; urgency=low

  * The archdetect string for the Broadcom BCM91250A evaluation board (aka
    "SWARM") got changed from sb1-swarm-bn to sb1-bcm91250a while the
    2.4 kernel uses the former.  Update the kernel selection and the
    test suite.
  * Remove kernel detection for LASAT since this machine was never
    supported.
  * Add kernel detection for 2.6 mips and mipsel kernels.
  * Add test suite entries for Broadcom BCM91480B evaluation board (aka
    "BigSur") and SGI O2 (IP32).
  * Add test suite entries for R3K and R4K based DECstations.

 -- Martin Michlmayr <tbm@cyrius.com>  Fri, 17 Mar 2006 22:28:27 +0000

base-installer (1.50) unstable; urgency=low

  * Add PPC970MP (actually PPC970*) and POWER5 to the list of powerpc64
    systems (closes: #339283, http://launchpad.net/bugs/35116).