@@ -1,21 +1,35 @@
 cpuinfo sparc32-smp.cpuinfo
 machine sparc
-majors 2.4
+majors 2.4 2.6
 flavour sparc32
 kernel-2.4 \
   kernel-image-2.4-sparc32-smp \
   kernel-image-2.4-sparc32
+kernel-2.6 \
+  linux-image-2.6-sparc32
 usable \
   kernel-image-2.4-sparc32 \
   kernel-image-2.4-sparc32-smp \
   kernel-image-2.4.26-sparc32 \
   kernel-image-2.4.26-sparc32-smp \
   kernel-image-2.4.27-1-sparc32 \
-  kernel-image-2.4.27-1-sparc32-smp
+  kernel-image-2.4.27-1-sparc32-smp \
+  linux-image-2.6-sparc32 \
+  linux-image-2.6.16-sparc32 \
+  linux-image-2.6.16-1-sparc32
 unusable \
   kernel-image-2.4-sparc64 \
   kernel-image-2.4-sparc64-smp \
   kernel-image-2.4.26-sparc64 \
   kernel-image-2.4.26-sparc64-smp \
   kernel-image-2.4.27-1-sparc64 \
-  kernel-image-2.4.27-1-sparc64-smp
+  kernel-image-2.4.27-1-sparc64-smp \
+  linux-image-2.6-sparc32-smp \
+  linux-image-2.6.16-sparc32-smp \
+  linux-image-2.6.16-1-sparc32-smp \
+  linux-image-2.6-sparc64 \
+  linux-image-2.6-sparc64-smp \
+  linux-image-2.6.16-sparc64 \
+  linux-image-2.6.16-sparc64-smp \
+  linux-image-2.6.16-1-sparc64 \
+  linux-image-2.6.16-1-sparc64-smp
