@@ -2,8 +2,9 @@ base-installer (1.55) UNRELEASED; urgency=low
 
   * Switch to using initramfs-tools by default for sparc; not available on
     netinst CDs yet, but base-installer will select yaird in that case.
+  * Add tests for 2.6 kernels for sparc32; smp still marked as not available.
 
- -- Frans Pop <fjp@debian.org>  Thu, 23 Mar 2006 13:16:11 +0100
+ -- Frans Pop <fjp@debian.org>  Thu, 30 Mar 2006 16:56:11 +0200
 
 base-installer (1.54) unstable; urgency=low
 
